my-app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {} # Allow traffic from pods in the same namespace
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector:
            matchLabels:
              app: trusted # Allow traffic from trusted pod
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector: {} # Allow traffic to pods in the same namespace
      ports:
        - protocol: TCP
          port: 8080
